# obsidian-second-brain

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ECOSYSTEM.md  FORK_INSIGHTS.md  README.md  SECURITY.md  SKILL.md  architecture.md  install.sh  llms.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
adapters/codex-cli/: adapter.sh
adapters/gemini-cli/: adapter.sh
commands/: create-command.md  idea-discovery.md  obsidian-ingest.md  obsidian-init.md  obsidian-projects.md  podcast.md
examples/sample-vault/: _CLAUDE.md
integrations/hermes-memory-provider/: README.md  __init__.py  plugin.yaml
integrations/telegram-journal/: README.md
references/: DELTAS.template.md  ai-first-rules.md
scripts/: bootstrap_vault.py  setup.sh
scripts/research/: podcast_extract.py
scripts/research/lib/: podcast.py  vault.py
tests/: test_smoke.py
