[project]
name = "obsidian-second-brain"
version = "0.10.0"
description = "Helper scripts for obsidian-second-brain - vault health, export, and maintenance utilities"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
